# NUMA-scheduler

./: .gitignore  CMakeLists.txt  multithreading.cpp  multithreading.h
include/: latch.h  scheduler.h  task.h
scripts/: build.sh  build_from_scratch.sh
src/: CMakeLists.txt  fortran-interop.F90  fortran-interop.cpp  fortran-interop.f90  multithreading.cpp
src/src/: Makefile  cmake_install.cmake
tests/: CMakeLists.txt
tests/fortran-interop/: CMakeLists.txt  c.c  c.cpp  f-openmp.f90  f.f90  fdsfsdf  fsdfd.f90  fsdvds  m.mod
tests/reductions/: CMakeLists.txt  main.cpp
